--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,9 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://images7.alphacoders.com/905/905858.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+input {
+  all: unset;
+  width: 250px;
+  height: 40px;
+  margin: 10px;
+  background-color: rgb(248, 237, 223);
 }
